Fix footer bar stretching

--- a/src/pages/CPGG/CPGG.module.css
+++ b/src/pages/CPGG/CPGG.module.css
@@ -122,11 +122,19 @@
   position: absolute;
 }
 
+.staticFigure {
+  position: fixed;
+  top: 120px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 999;
+}
+
 .staticFigure img {
-  height: 300px;
-  margin-top: -100px;
-  padding-left: 400px;
-  margin-bottom: 0;
+  width: 250px;
+  height: 250px;
+  object-fit: contain;
+  border-radius: 50%;
 }
 
 /* Responsive Design */
